unpackaged/main/default/objects/CodeAgence__c/CodeAgence__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Code Agence</label>
</CustomObject>