unpackaged/main/default/objects/CodeAgence__c/fields/Libelle_en_GB__c.field-meta.xml
<CustomField>
    <fullName>Libelle_en_GB__c</fullName>
    <label>Libelle_en_GB</label>
    <length>255</length>
    <type>Text</type>
</CustomField>