unpackaged/main/default/objects/CodeAgence__c/fields/Libelle_es__c.field-meta.xml
<CustomField>
    <fullName>Libelle_es__c</fullName>
    <label>Libelle_es</label>
    <length>255</length>
    <type>Text</type>
</CustomField>