unpackaged/main/default/objects/CodeAgence__c/fields/Nom_Agence__c.field-meta.xml
<CustomField>
    <fullName>Nom_Agence__c</fullName>
    <label>Nom_Agence</label>
    <length>255</length>
    <type>Text</type>
</CustomField>