unpackaged/main/default/objects/CodeAgence__c/fields/Numero_Agence__c.field-meta.xml
<CustomField>
    <fullName>Numero_Agence__c</fullName>
    <label>Numero_Agence</label>
    <length>255</length>
    <type>Text</type>
</CustomField>